create github pages

--- a/page6.html
+++ b/page6.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="header5 cid-rSlh3S3n5l" id="header5-1u">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header5 cid-rSlh3S3n5l" id="header5-1u">
 
     
 
