--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">پروژه ها</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page1.html">پروژه اول (مرجعیت)</a><a class="text-black dropdown-item display-4" href="page2.html">پروژه دوم (شهدای ناجا)</a><a class="text-black dropdown-item display-4" href="page3.html">پروژه سوم (شهید کریمی)</a><a class="text-black dropdown-item display-4" href="page4.html">پروژه چهارم (نظام پزشکی)</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="page5.html" data-toggle="dropdown-submenu" aria-expanded="false">
                         مشارکت</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page5.html" aria-expanded="false">نحوه مشارکت</a><a class="text-black dropdown-item display-4" href="page6.html" aria-expanded="false">نحوه محاسبه سود</a><a class="text-black dropdown-item display-4" href="page7.html" aria-expanded="false">سوالات پر تکرار</a></div></li>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="carousel slide cid-rS0FoDlf8a" data-interval="false" id="slider1-s">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="carousel slide cid-rS0FoDlf8a" data-interval="false" id="slider1-s">
 
     
 
