--- a/page4.html
+++ b/page4.html
@@ -143,7 +143,7 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mobi-mbri-cash mobi-mbri"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-5">32.600.000.000</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-5">32.750.000.000</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">مقدار هزینه شده در این پروژه (به ریال)</h4>
@@ -193,7 +193,7 @@
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">
             نمودار پیشرفت مالی و زمانی پروژه</h2>
 
-        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">زمین اسفند ماه 1398 خریداری شده و پرداختی تا پایان آذرماه حدود 3 میلیارد و 290 میلیون تومان است.</h3>
+        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">زمین اسفند ماه 1398 خریداری شده و پرداختی تا پایان اسفندماه 1399 حدود 3 میلیارد و 275 میلیون تومان است.</h3>
 
         <div class="row pt-5 mt-5">
             <div class="col-md-6 text-elements">
@@ -359,7 +359,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">page</a> builder</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/countdown/jquery.countdown.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise site creator - <a href="https://mobirise.site/p" style="color:#aaa;">More info</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/countdown/jquery.countdown.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
