--- a/faq.html
+++ b/faq.html
@@ -77,11 +77,11 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_54" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_40" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5"><strong>سود به چه صورت محاسبه می‌شود؟</strong></h4>
                                 </a>
                             </div>
-                            <div id="collapse1_54" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_40" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-5">نحوه محاسبه سود در صفحه <a href="page5.html">نحوه مشارکت</a> سود آمده است. ولی اجمالا سود به صورت روزشمار محاسبه می‌شود و سود هر پروژه به صورت مستقل پس از فروش کل واحدها تعیین می‌گردد.&nbsp;</p>
                                 </div>
@@ -89,12 +89,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_54" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_40" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5"><strong>آیا قبل از پایان یک پروژه میتوان بخشی یا کل آورده را پس گرفت؟</strong></h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_54" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_40" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-5">بله به هر حال سرمایه‌گزاری در حوزه مسکن، یک سرمایه‌گزاری بلند مدت محسوب می‌شود و ممکن است سرمایه‌گزار قبل از پایان یک پروژه -به هر دلیلی- نیاز داشته باشد مبالغ سرمایه‌گزاری شده را پس بگیرد لذا در این حالت مبلغ مورد نیاز را به ما اعلام می‌کند و ما موظف میشویم ظرف دو ماه آینده این مبلغ را به ایشان مسترد گردانیم. در صورتی که سرمایه‌گزار قصد خروج کامل داشته باشد، اصل سرمایه به اضافه 18 درصد سود علی الحساب (مطابق قرارداد) به ایشان پرداخت می‌گردد. الباقی سود پس از پایان پروژه و مشخص شدن نرخ سود قطعی به ایشان پرداخت خواهد شد.<br></p>
                                 </div>
@@ -102,11 +102,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_54" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_40" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-5"><strong>در چه صورت واحد رزرو کنیم؟</strong></h4>
                                 </a>
                             </div>
-                            <div id="collapse3_54" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_40" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-5">در صورتی که تصمیم دارید در یک پروژه شخصا ساکن شوید، اقدام به رزرو واحد کنید. در غیر این صورت ترجیح آن است که واحد رزرو نکنید. باید بدانید که رزرو واحد تاثیری در مقدار سود شما نخواهد داشت. سود تابعی از هزینه و فروش و نحوه سرمایه‌گزاری است و در زمان فروش هم ما متناسب با عرف منطقه و کیفیت ساخت، بالاترین قیمت ممکن برای فروش را تعیین خواهیم کرد. از طرفی برخی از افراد در صورتی سرمایه‌گزاری می‌کنند که در همان پروژه بتوانند ساکن شوند. لذا در صورت رزرو بی مورد، امکان جذب سرمایه و پیشبرد بهتر امور از ما سلب می‌شود. لذا تکرار می‌شود: خواهشمندیم در صورتی رزرو فرماییدکه واقعا قصد سکونت دارید. ضمنا حتی در صورت رزرو واحد چنانچه پرداختی شما کمتر از 50 درصد هزینه صورت گرفته در زمان پیدا شدن مشتری جدید باشد، این حق را برای خود قایلیم که رزرو شما را نادیده گرفته و واحد را رزرو سرمایه گزار جدید نمایید. برای تنویر موضوع به مثال زیر توجه کنید: شخصی در یک ساختمان 5 طبقه واحد رزرو کرده و 50 میلیون تومان پرداخت کرده است. روزی سرمایه گزار جدیدی به ما مراجعه می‌کند که سرمایه گزاری خود را منوط به رزرو واحد بداند و آورده اولیه او به طور مثال 200 میلیون تومان است. در همان روز ما برای کل پروژه 2 میلیارد تومان هزینه کرده ایم که سهم هر واحد 400 میلیون تومان است. در این حالت رزرو نفر اول منتفی و واحد برای فرد جدید رزرو خواهد شد. سرمایه گزاران محترم در نظر داشته باشند که اولویت اول ما منافع جمعی است.</p>
                                 </div>
@@ -114,11 +114,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_54" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_40" aria-expanded="false" aria-controls="collapse4">
                                     <h4 class="mbr-fonts-style display-5"><strong>چگونه سود دریافتی را بیشتر کنیم؟</strong></h4>
                                 </a>
                             </div>
-                            <div id="collapse4_54" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_40" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-5">برای پاسخ به این سوال باید بدانیم چه موقع سود ما بیشینه است و چه موقع کمینه. سود ما زمانی کمینه است که کل هزینه لازم برای اجرای یک پروژه در روز اول پروژه واریز گردد و ما به &nbsp;تدریج در ساخت پروژه هزینه کنیم. مثلا در مورد پروژه اول ما کمینه سود حدود 23درصد سالیانه بدست آمده است. بیشینه سود زمانی بدست می‌آید که هزینه روزانه ساخت به صورت روزانه تامین شود و مانده همیشه برابر صفر باشد. در این حالت در پروژه اول به طور مثال سود ما حدود 90 درصد سالیانه محاسبه شد. بدیهی است که این دو حالت حدی امکان وقوع ندارند و ما نرخ سودی بینابینی خواهیم داشت.&nbsp;<br>عوامل بیشتر شدن سود پروژه موارد زیر میباشند:<br>1- کمتر شدن هزینه ساخت پروژه<br>2- ساخت سریعتر و در کوتاه ترین زمان ممکن<br>3- فروش با قیمت بالاتر<br>4- صفر یا ناچیز بودن مانده<br>برای دو عامل اول همکاران اجرایی ما تمام توان خود را بکار میگیرند که پروژه ها در بهترین زمان ممکن و با کمترین هزینه احداث شوند. فروش هم تابع بازار است و به هر حال ما تلاش خود را بکار می‌بندیم. در مورد عامل چهارم هم، ما هر موقع واریزی زیاد داشته باشیم، پروژه جدیدی را آغاز میکنیم که مانده ما همیشه حداقلی باقی بماند.<br>باید بدانید که افزایش سود فردی در گرو سود جمعی است و گروه ما گروهی متشکل از عوامل اجرایی و سرمایه گزاران محترم است که باید در هر زمان بر اساس منافع جمعی تصمیم بگیرند. گاهی ما نیازمند سرمایه های جدید هستیم، گاهی نیازمند پیش فروش واحد برای جذب سرمایه. همکاری با ما در پیشبرد امور منجر به افزایش سود جمعی و به تبع آن سود تک تک سرمایه گزاران است. ما آنچه در توان داریم انجام می‌دهیم و بی‌نیاز از کمک معنوی، مالی و مشورتی شما نیستیم.</p>
                                 </div>
@@ -178,7 +178,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to develop a website - <a href="https://mobirise.site/x" style="color:#aaa;">More here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/h" style="color:#aaa;">built with</a> Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
